--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
 <h1>Hello!</h1>
+
+<script>
+    d3.select('h1').style('color', 'darkblue');
+    d3.select('h1').style('font-size', '24px');
+</script>
