--- a/index.html
+++ b/index.html
@@ -6,3 +6,18 @@
     d3.select('h1').style('color', 'darkblue');
     d3.select('h1').style('font-size', '24px');
 </script>
+
+var data = [80, 120, 60, 150, 200];
+
+var barHeight = 20;
+
+var bar = d3.select('svg')
+          .selectAll('rect')
+          .data(data)
+          .enter()
+          .append('rect')
+          .attr('width', function(d) {  return d; })
+          .attr('height', barHeight - 1)
+          .attr('transform', function(d, i) {
+            return "translate(0," + i * barHeight + ")";
+          });
