--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     d3.select('h1').style('font-size', '24px');
 </script>
 
+<svg width='200' height='500'></svg>
+
 var data = [80, 120, 60, 150, 200];
 
 var barHeight = 20;
