--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!</h1>
+<h1>Hello!o</h1>
 
 <script>
     d3.select('h1').style('color', 'darkblue');
     d3.select('h1').style('font-size', '24px');
-</script>
 
 <svg width='200' height='500'></svg>
 
@@ -23,3 +22,5 @@ var bar = d3.select('svg')
           .attr('transform', function(d, i) {
             return "translate(0," + i * barHeight + ")";
           });
+
+</script>
