--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!o</h1>
+<h1>Hello!</h1>
+
+<svg width='200' height='500'></svg>
 
 <script>
     d3.select('h1').style('color', 'darkblue');
     d3.select('h1').style('font-size', '24px');
 
-<svg width='200' height='500'></svg>
+
 
 var data = [80, 120, 60, 150, 200];
 
