--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0</h1>
+<h1>Hello!</h1>
 
-<svg width='200' height='500'></svg>
+<svg width='200' height='200'></svg>
 
 <script>
     d3.select('h1').style('color', 'darkblue');
