--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ var bar = d3.select('svg')
 d3.select('svg')
         .on('click', function () {
             d3.select(this)
-            .attr("fill", 'darkblue');
+            .attr("fill", 'red');
         });
 
 </script>
