--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@ var bar = d3.select('svg')
           .attr('height', barHeight - 1)
           .attr('transform', function(d, i) {
             return "translate(0," + i * barHeight + ")";
-          })
-          .on('click', function () {
+          });
+
+d3.select('svg')
+        .on('click', function () {
             d3.select(this)
             .attr("fill", 'red');
-
-//d3.select('svg')
-        //.on('click', function () {
-            //d3.select(this)
-            //.attr("fill", 'red');
-        //});
+        });
 
 </script>
