--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h1>Hello!</h1>
 
-<img scr="MOSHED-2019-1-17-22-19-0.gif" alt="lol">
+<img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol">
 
 <svg width='200' height='105'></svg>
 
