--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!</h1>
+<h1>Hello!0</h1>
 
 <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol">
 
@@ -31,7 +31,7 @@ d3.select('svg')
     .selectAll('rect')
         .on('click', function () {
             d3.select(this)
-            .attr("fill", 'red');
+            .attr("fill", 'randomColor');
         });
 
 </script>
