--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
-<svg width='200' height='105'></svg>
+<svg width='200' height='200'></svg>
 
 <script>
     d3.select('h1').style('color', 'darkblue');
@@ -31,7 +31,7 @@ d3.select('svg')
     .selectAll('rect')
         .on('click', function () {
             d3.select(this)
-            .attr("fill", 'randomColor');
+            .attr("fill", 'red');
         });
 
 </script>
