--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!000</h1>
+<h1>Hello!0000000</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
@@ -24,7 +24,7 @@ var bar = d3.select('svg')
           .attr('height', function(d) {  return d; })
           .attr('width', barHeight - 1)
           .attr('transform', function(d, i) {
-            return "translate(" + i * barHeight + ", function(d) {  return 200 - d; })";
+            return "translate(" + i * barHeight + "," + d + ")";
           });
 
 d3.select('svg')
