--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0000</h1>
+<h1>Hello!0</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
@@ -34,7 +34,12 @@ d3.select('svg')
             .attr("fill", 'red');
         });
 
- d3.select('svg')
-    .call(d3.zoom());
+const sva = d3.select("svg");
+    
+var zoom = d3.zoom()
+    .on(zoom,function(e) {d3.select('sva').attr('transform',e.tranform);})
+    
+d3.select('svg')
+    .call(zoom);
 
 </script>
