--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0</h1>
+<h1>Hello!000000</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
-<svg width='200' height='500'></svg>
+<svg width='200' height='500'><g></g></svg>
 
 <script>
     d3.select('h1').style('color', 'darkblue');
@@ -33,11 +33,9 @@ d3.select('svg')
             d3.select(this)
             .attr("fill", 'red');
         });
-
-const sva = d3.select("svg");
     
 var zoom = d3.zoom()
-    .on(zoom,function(e) {d3.select('sva').attr('transform',e.tranform);})
+    .on(zoom,function(e) {d3.select('svg g').attr('transform',e.tranform);})
     
 d3.select('svg')
     .call(zoom);
