--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0</h1>
+<h1>Hello!0000</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
@@ -34,10 +34,12 @@ d3.select('svg g')
             .attr("fill", 'red');
         });
     
-var zoom = d3.zoom()
-    .on('zoom',function(e) {d3.select('svg g').attr('transform',e.transform);})
+//var zoom = d3.zoom()
+    //.on('zoom',function(e) {d3.select('svg g').attr('transform',e.transform);})
     
-d3.select('svg')
-    .call(zoom);
+//d3.select('svg')
+    //.call(zoom);
+
+d3.select('svg g').call(d3.zoom().on("zoom", zoomed));
 
 </script>
