--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0000</h1>
+<h1>Hello!0</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
-<svg width='200' height='500'><g></g></svg>
+<svg width='200' height='500'></svg>
 
 <script>
     d3.select('h1').style('color', 'darkblue');
@@ -16,7 +16,7 @@ var data = [80, 120, 60, 150, 200];
 
 var barHeight = 20;
 
-var bar = d3.select('svg g')
+var bar = d3.select('svg')
           .selectAll('rect')
           .data(data)
           .enter()
@@ -27,7 +27,7 @@ var bar = d3.select('svg g')
             return "translate(" + i * barHeight + "," + (200 - d) + ")";
           });
 
-d3.select('svg g')
+d3.select('svg')
     .selectAll('rect')
         .on('click', function () {
             d3.select(this)
@@ -40,6 +40,6 @@ d3.select('svg g')
 //d3.select('svg')
     //.call(zoom);
 
-d3.select('svg g').call(d3.zoom().on("zoom", zoomed));
+d3.select('svg').call(d3.zoom().on("zoom", zoomed));
 
 </script>
