--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0</h1>
+<h1>Hello!000000</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
@@ -40,6 +40,9 @@ d3.select('svg')
 //d3.select('svg')
     //.call(zoom);
 
-d3.select('svg').call(d3.zoom().on("zoom", zoomed));
+d3.select('svg').call(d3.zoom().on("zoom", function () {
+       svg.attr("transform", d3.event.transform)
+    }))
+    .append("g");
 
 </script>
