--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     d3.select('h1').style('font-size', '24px');
 
 d3.select('svg').call(d3.zoom().on("zoom", function () {
-       svg.attr("transform", d3.event.transform)
+       d3.select(this).attr("transform", d3.event.transform)
     }))
     .append("g");
 
