--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0</h1>
+<h1>Hello!0000</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
@@ -11,7 +11,7 @@
     d3.select('h1').style('font-size', '24px');
 
 d3.select('svg').call(d3.zoom().on("zoom", function () {
-       d3.select(this).attr("transform", d3.event.transform)
+       d3.select('g').attr("transform", d3.event.transform)
     }))
     .append("g");
 
