--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src='https://d3js.org/d3.v4.min.js'></script>
 
-<h1>Hello!0000</h1>
+<h1>Hello!0</h1>
 
 <!-- <img src="MOSHED-2019-1-17-22-19-0.gif" alt="lol"> -->
 
@@ -18,14 +18,14 @@ d3.select('svg').call(d3.zoom().on("zoom", function () {
 var x = d3.scaleLinear()
     .domain([4, 8])
     .range([ 0, 200 ]);
-  var xAxis = SVG.append("g")
+  var xAxis = d3.select('svg').append("g")
     .attr("transform", "translate(0," + 500 + ")")
     .call(d3.axisBottom(x));
 
   var y = d3.scaleLinear()
     .domain([0, 9])
     .range([ 500, 0]);
-  var yAxis = SVG.append("g")
+  var yAxis = d3.select('svg').append("g")
     .call(d3.axisLeft(y));
 
 var data = [80, 120, 60, 150, 200];
